# HomeAssistantAPI

./: .breakpoints  .cspell.json  .dockerignore  .gitignore  .gitpod.yml  .markdownlint.json  .mega-linter.yml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  TODO.md  compose.yml  entrypoint.sh  example.py  main.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-issue.md  feature_request.md
.github/workflows/: code_rules.yml  codeql-analysis.yml  flake8.yml  mega-linter.yml  python-publish.yml  test-suite.yml  test_suite.yml
docs/: CONTRIBUTING.rst  advanced.rst  api.rst  conf.py  cookbook.rst  credits.rst  development.rst  doc_requirements.txt  faq.rst  index.rst  installation.rst  processing.rst  quickstart.rst  usage.rst
docs/_static/css/: custom.css
docs/dev_docs/: contribution.rst  currently.rst  guidelines.rst  procedures.rst  tipsandtricks.rst
docs/extensions/: resourcelinks.py
examples/: async_get_entities.py  basic.py  myq_grarage_door.py  set_sensors.py
homeassistant_api/: __init__.py  auth.py  client.py  const.py  entity.py  errors.py  mixins.py  processing.py  rawapi.py  rawasyncclient.py  rawbaseclient.py  rawclient.py
homeassistant_api/_async/: __init__.py  asyncclient.py
homeassistant_api/_async/models/: __init__.py  domains.py  entity.py  events.py  states.py
homeassistant_api/models/: __init__.py  base.py  calendar.py  domains.py  entity.py  events.py  history.py  logbook.py  states.py
homeassistant_api/servicedomains/: __init__.py  domain.py  service.py
homeassistant_api/states/: __init__.py  automation.py  binary_sensor.py  calendar.py  camera.py  entity.py  light.py  persistent_notification.py  person.py  remote.py  scene.py  script.py  sensor.py  sun.py  weather.py  zone.py
scripts/: make_test_server  run_docs_dev
tests/: conftest.py  server_config.yaml  test_client.py  test_endpoints.py  test_errors.py  test_models.py
volumes/: token.txt
volumes/config/: configuration.yaml
volumes/config/.storage/: auth  auth_provider.homeassistant  core.analytics  core.area_registry  core.config  core.config_entries  core.entity_registry  core.restore_state  frontend.user_data_e85fc7b7b8924dc9b024ce90ad23799e  http  http.auth  person
