[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.bandit]
skips = ["B105"]

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["GrandMoff100 <minecraftcrusher100@gmail.com>"]
description = "Python Wrapper for Homeassistant's REST API"
documentation = "https://homeassistantapi.readthedocs.io"
homepage = "https://github.com/GrandMoff100/HomeAssistantAPI"
license = "GPL-3.0-or-later"
name = "HomeAssistant-API"
readme = "README.md"
include = ["homeassistant_api/py.typed"]
repository = "https://github.com/GrandMoff100/HomeAssistantAPI"
version = "3.0.4"
packages = [{ include = "homeassistant_api" }]

[tool.poetry.dependencies]
aiohttp = "^3.8.1"
aiohttp-client-cache = "^0.6.1"
pydantic = "<=1.9.0"
python = ">=3.7,<4.0.0"
requests = "2.27.1"
requests-cache = "^0.9.2"
simplejson = "^3.17.6"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.17.0"
pylint = "^2.12.2"
pytest = "^6.2.5"
sphinx-autodoc-typehints = {version = "^1.17.0", extras = ["docs"]}
sphinx-rtd-theme = {version = "^1.0.0", extras = ["docs"]}
toml = "^0.10.2"
types-docutils = "^0.17.5"
types-requests = "^2.27.9"
types-simplejson = "^3.17.3"
types-toml = "^0.10.4"
mypy = "^0.931"
autodoc-pydantic = {version = "^1.6.1", extras = ["docs"]}
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"

[tool.pylint.master]
extension-pkg-whitelist = ["pydantic"]
ignore-paths = ["examples"]

[tool.pylint.messages_control]
disable = [
    "duplicate-code",
    "too-many-public-methods",
    "too-many-arguments",
    "protected-access"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"