[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["GrandMoff100 <minecraftcrusher100@gmail.com>"]
description = "Python Wrapper for Homeassistant's REST API"
documentation = "https://homeassistantapi.readthedocs.io"
homepage = "https://github.com/GrandMoff100/HomeAssistantAPI"
license = "GPL-3.0-or-later"
name = "HomeAssistant-API"
readme = "README.md"
include = ["homeassistant_api/py.typed"]
repository = "https://github.com/GrandMoff100/HomeAssistantAPI"
version = "4.1.1.post2"
packages = [{ include = "homeassistant_api" }]

[tool.poetry.dependencies]
aiohttp = "^3.8.1"
aiohttp-client-cache = "^0.6.1"
pydantic = "<=1.9.0"
python = "^3.7,<4.0.0"
requests = "^2.27.1"
requests-cache = "^0.9.2"
simplejson = "^3.17.6"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx-autodoc-typehints = "^1.17.0"
sphinx-rtd-theme = "^1.0.0"
autodoc-pydantic = "^1.6.1"

[tool.poetry.group.styling]
optional = true

[tool.poetry.group.styling.dependencies]
pre-commit = "^2.17.0"
types-docutils = "^0.17.5"
types-requests = "^2.27.9"
types-simplejson = "^3.17.3"
types-toml = "^0.10.4"
mypy = "^0.931"
ruff = "^0.0.209"

[tool.poetry.group.testing]
optional = true

[tool.poetry.group.testing.dependencies]
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
pytest = "^6.2.5"
aiosqlite = "^0.18.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
# log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "def __repr__\\(self\\) -> str:",
    "raise RequestTimeoutError\\(",
    "except \\(json\\.decoder\\.JSONDecodeError, simplejson.decoder\\.JSONDecodeError\\) as err:",
    "pass",
    "last_updated < \\(now := datetime\\.now\\(\\)\\) - wait",
    "pragma: no cover"
]

[tool.ruff]
exclude = [
    '.git',
    '__pycache__',
    '.github',
]
ignore = ['E501']
select = [
    'E',
    'F',
    'W',
]

[tool.ruff.per-file-ignores]
"__init__.py" = ['F401']
"conf.py" = ['E402']

[tool.isort]
profile = "black"

[tool.mypy]
disable_error_code = [
    "no-untyped-def",
    "name-defined",
]
